--- a/src/base.css
+++ b/src/base.css
@@ -5,8 +5,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-image: url('/src/assets/bubbles.png'); /* Replace with your image path */
-  background-opacity: 20%;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,21 +18,7 @@ body {
   place-items: center;
   flex-direction: column;
   min-width: 320px;
-  min-height: 100vh;
-}
-
-
-#content {
-  max-width: 58%;
-  margin: 0 auto;
-  padding: 3rem;
-  padding-bottom: 0;
-  text-align: center;
-  background-color: #151d2468;
-  backdrop-filter: blur(100px);
-  border: 3px solid #6785bf55;
-  border-radius: 18px;
-  transform: translateY(140px);
+  min-height: 100%;
 }
 
 section {
