--- a/src/base.css
+++ b/src/base.css
@@ -10,6 +10,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  scrollbar-color: #6785bf99 #6785bf55;
 }
 
 body {
@@ -44,17 +46,18 @@ span {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  background-color: #151d2468;
+  backdrop-filter: blur(300px);
+  border: 2px solid #6785bf55;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #6785bfff;
 }
 button:focus,
 button:focus-visible {
