--- a/src/base.css
+++ b/src/base.css
@@ -32,7 +32,7 @@ span {
   color: #8776d6;
 }
 
-button {
+button, .button {
   border-radius: 8px;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -45,12 +45,22 @@ button {
   border: 2px solid #6785bf55;
 }
 
-button:hover {
+.button {
+  color: #ffffff;
+  display: inline-block;
+  text-decoration: none;
+}
+
+.button:hover {
+  color: #ffffff;
+}
+
+button:hover, .button:hover {
   border-color: #6785bfff;
 }
 
-button:focus,
-button:focus-visible {
+button:focus, .button:focus,
+button:focus-visible, .button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
