--- a/src/base.css
+++ b/src/base.css
@@ -52,14 +52,11 @@ button,
   border: 2px solid #6785bf55;
 }
 
+button,
 .button {
   color: #ffffff;
   display: inline-block;
   text-decoration: none;
-}
-
-.button:hover {
-  color: #ffffff;
 }
 
 button:hover,
