--- a/src/base.css
+++ b/src/base.css
@@ -20,12 +20,18 @@
   scrollbar-color: #6785bf99 #6785bf55;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
   flex-direction: column;
-  min-width: 320px;
   min-height: 100%;
 }
 
@@ -61,6 +67,7 @@ button,
 
 button:hover,
 .button:hover {
+  color: white;
   border-color: #6785bfff;
 }
 
